--- a/packages.config
+++ b/packages.config
@@ -1,10 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="BouncyCastle" version="1.8.9" targetFramework="net48" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
-  <package id="iTextSharp" version="5.5.13.2" targetFramework="net472" />
+  <package id="iTextSharp" version="5.5.13.3" targetFramework="net48" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net48" />
   <package id="Moq" version="4.18.4" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
+  <package id="QRCoder" version="1.6.0" targetFramework="net48" />
   <package id="SqlServerCompact" version="4.0.8854.1" targetFramework="net48" />
   <package id="xunit" version="2.4.1" targetFramework="net472" />
   <package id="xunit.abstractions" version="2.0.3" targetFramework="net472" />
