--- a/packages.config
+++ b/packages.config
@@ -3,6 +3,7 @@
   <package id="BouncyCastle" version="1.8.9" targetFramework="net48" />
   <package id="EntityFramework" version="6.5.1" targetFramework="net48" />
   <package id="iTextSharp" version="5.5.13.3" targetFramework="net48" />
+  <package id="Microsoft.AspNet.Cors" version="5.3.0" targetFramework="net48" />
   <package id="Microsoft.SqlServer.Compact" version="4.0.8876.1" targetFramework="net48" />
   <package id="Moq" version="4.18.4" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net472" />
